--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,14 @@
 }
 
 /* header */
+header {
+    height:80px;
+    
+}
 
+#jumbotron {
+    height: 500px;
+}
 
 /* main */
 
@@ -15,3 +22,20 @@
 
 
 /* debug */
+.debug header {
+    background-color: blueviolet;
+}
+
+.debug #jumbotron {
+    background-color: chartreuse;
+}
+
+.debug main {
+    height: 2300px;
+    background-color: crimson;
+}
+
+.debug footer {
+    height: 500px;
+    background-color: yellow;
+}
