--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 header {
     height:80px;
     background-color:#255ee9 ;
-    
+    line-height: 80px;    
 }
 
 #logo,
@@ -28,15 +28,30 @@ header {
     width: 25%;
     float: left;
 }
+#logo img {
+    vertical-align: middle;
+}
+
+#log_in {
+    text-align: right;
+}
 
 nav {
     width: 50%;
     float: left;
+    text-align: center;
 }
 
 nav li {
     display: inline-block;
     list-style: none;
+}
+nav li a {
+    color: white;
+    font-size: 17px;
+    font-weight: 600;
+    text-decoration: none;
+    margin: 0 15px;
 }
 
 #jumbotron {
@@ -56,7 +71,7 @@ nav li {
     border: 2px solid black;
 }
 
-.debug .row div,
+/* .debug .row div,
 .debug .row nav {
     height: 80px;
     background-color: thistle;
@@ -65,7 +80,7 @@ nav li {
 .debug .row nav {
     height: 80px;
     background-color: brown;
-}
+} */
 /* .debug header {
     background-color:#922f2f;
 } */
