--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 .container {
     width: 90%;
     margin: 0 auto;
@@ -49,9 +53,14 @@ nav li {
 nav li a {
     color: white;
     font-size: 17px;
-    font-weight: 600;
+    font-weight: 500;
+    font-weight: bold;
     text-decoration: none;
     margin: 0 15px;
+}
+
+nav li a:hover {
+    text-decoration: underline;
 }
 
 #jumbotron {
